[package]
name = "rusty-picopd"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.4"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embassy-executor = { version = "0.5.0", features = ["executor-thread", "arch-cortex-m", "integrated-timers"] }
embassy-rp = { version = "0.1.0", features = ["critical-section-impl", "time-driver"] }
embassy-time = "0.3.0"
panic-probe = "0.3.1"

[profile.release]
debug = 2

