[package]
name = "rusty-picopd"
version = "0.1.0"
edition = "2021"

[dependencies]
bitfield = "0.15.0"
bitvec = { version = "1.0.1", default-features = false, features = [] }
cortex-m-rt = "0.7.4"
defmt = "0.3.6"
defmt-rtt = "0.4.0"
embassy-executor = { version = "0.5.0", features = ["executor-thread", "arch-cortex-m", "integrated-timers"] }
embassy-futures = "0.1.1"
embassy-rp = { version = "0.1.0", features = ["critical-section-impl", "time-driver"] }
embassy-time = "0.3.0"
embassy-usb = "0.1.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
embedded-hal-bus = { version = "0.2.0", features = ["async"] }
futures = { version = "0.3.30", default-features = false }
itoa = "1.0.11"
panic-probe = "0.3.1"
portable-atomic = { version = "1.6.0", features = ["critical-section"] }

[profile.release]
debug = 2

